ADD: ZENavigationMesh and ZENavigationMesh generator added. ADD: Generic ZEOctree spatial database class added. ADD: ZECanvas::AddConvexPolygon and ZECanvas::AddWireframeConvexPolygon functions added. ADD: ZEAStar path finder class and it's tests added. CHG: ZELine, ZERay, ZELineSegment GetPointOn, GetStartPoint, GetEndPoint functions added and modified. ADD: ZEAABBox::Generate and ZEAABBox::Combine functions added. ADD: ZEMaxHeap::RemoveMax, ZEMinHeap::RemoveMin functions added. ADD: GetItem and Clear functions added to ZEMinHeap and ZEMaxHeap. FIX: ZEPortalMap visibility property bug fixed.
svn path=/trunk/; revision=718

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,6 +208,8 @@ include_directories(
 link_directories(
 	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}
 	#${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/Release
+	#${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/Release/vrpn
+
 	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/$(ConfigurationName)
 	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/$(ConfigurationName)/vrpn
 	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/$(ConfigurationName)/Bullet
