--- a/ZEFoundation/CMakeLists.txt
+++ b/ZEFoundation/CMakeLists.txt
@@ -57,6 +57,8 @@ ze_add_source(ZEError.h 			Sources Headers)
 ze_add_source(ZEError.cpp 			Sources)
 ze_add_source(ZESerialPort.h 		Sources Headers)
 ze_add_source(ZESerialPort.cpp 		Sources)
+ze_add_source(ZEOctree.h			Sources Headers)
+ze_add_source(ZEOctree.cpp			Sources)
 
 ze_add_library(ZEFoundationAPI 
 	SOURCES ${Sources} 
