CHG: ZEAIProto refactored to ZEAI sub-system and moved to Source folder. CHG: ZEAI components removed from ZEAIProto. CHG: Renaming and file moving done on ZEAI. CHG: ZEPolygon moved to ZEMath.
svn path=/trunk/; revision=721

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,7 @@ set(ZEBUILD_MONOLITHIC FALSE CACHE BOOL "Compile Zinek as monolithic. No dll wil
 ## Directories
 #########################################################################################
 include_directories(
+	${CMAKE_SOURCE_DIR}
 	${CMAKE_SOURCE_DIR}/Source
 	${CMAKE_SOURCE_DIR}/ZEFoundation
 	${CMAKE_SOURCE_DIR}/ZEToolSDK
