ADD: ZEActor integrated with ZEEntity system. FIX: Notation fix. ZE_ROPT_TRIANGLESTRIPT renamed to ZE_ROPT_TRIANGLE_STRIPT. ADD: ZETerrain initial commit.
svn path=/trunk/; revision=724

--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -82,6 +82,8 @@ ze_add_source(ZESimpleMaterial.cpp 					Sources)
 ze_add_source(ZESimpleMaterial.h 					Sources Header ZEPP)
 ze_add_source(ZESkyBoxMaterial.cpp 					Sources)
 ze_add_source(ZESkyBoxMaterial.h 					Sources Header ZEPP)
+ze_add_source(ZETerrainMaterial.cpp					Sources)
+ze_add_source(ZETerrainMaterial.h 					Sources Headers ZEPP)
 ze_add_source(ZETexture.cpp 						Sources)
 ze_add_source(ZETexture.h 							Sources Headers)
 ze_add_source(ZETexture2D.cpp						Sources)
