--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -77,6 +77,8 @@ ze_add_source(ZED3D9SSAOProcessor.cpp			Sources)
 ze_add_source(ZED3D9SSAOProcessor.h				Sources)
 ze_add_source(ZED3D9SSAAProcessor.cpp			Sources)
 ze_add_source(ZED3D9SSAAProcessor.h				Sources)
+ze_add_source(ZED3D9TerrainMaterial.cpp			Sources)
+ze_add_source(ZED3D9TerrainMaterial.h			Sources)
 ze_add_source(ZED3D9Texture2D.cpp				Sources)
 ze_add_source(ZED3D9Texture2D.h					Sources)
 ze_add_source(ZED3D9Texture3D.cpp				Sources)
