ADD: Tests of revision 715 has been committed. ADD/CHG: New ZEMath Tests added. REM: Old ZEVectorTests.cpp and ZEMatrixTests.cpp removed. ADD/CHG: New ZEDS Tests added. ADD/CHG: New ZEFile Tests added CHG: ZETest/ZETestCheck.h has been modified for according to new testing standards.
svn path=/trunk/; revision=740

--- a/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/ZEFoundation/ZEFile/CMakeLists.txt
@@ -43,17 +43,25 @@ ze_add_source(ZECompressedFile.cpp	Sources)
 ze_add_source(ZECompressedFile.h	Sources Headers)
 ze_add_source(ZEFile.cpp			Sources)
 ze_add_source(ZEFile.h				Sources Headers)
+ze_add_source(ZEFileTests.cpp			  Tests)
 ze_add_source(ZEPartialFile.cpp		Sources)
 ze_add_source(ZEPartialFile.h		Sources Headers)
+ze_add_source(ZEPartialFileTests.cpp	Tests)
 ze_add_source(ZEFileCache.cpp		Sources)
 ze_add_source(ZEFileCache.h			Sources Headers)
+ze_add_source(ZEFileCacheTests.cpp	Tests)
 ze_add_source(ZEPack.cpp			Sources)
 ze_add_source(ZEPack.h				Sources Headers)
 
 ze_add_library(ZEFile 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-	LIBS libzlib
+	LIBS libzlib ZEFoundationAPI
 	INSTALL
 	INSTALL_DESTINATION ZEFoundationAPI/ZEFile
 	INSTALL_COMPONENT ZESDK)
+	
+ze_add_unit_tests(ZEFileTests
+	SOURCES ${Tests}
+	EXTRA_SOURCES
+	TEST_TARGET ZEFile)
