--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -39,6 +39,7 @@ ze_add_source(ZEAABBox.cpp				Sources)
 ze_add_source(ZEAABBox.h				Sources Headers)
 ze_add_source(ZEAngle.cpp				Sources)
 ze_add_source(ZEAngle.h					Sources Headers)
+ze_add_source(ZEAngleTests.cpp			Tests)
 ze_add_source(ZEAABBoxTests.cpp			Tests)
 ze_add_source(ZEBSphere.cpp				Sources)
 ze_add_source(ZEBSphere.h				Sources Headers)
@@ -54,7 +55,8 @@ ze_add_source(ZELineSegmentTests.cpp	Tests)
 ze_add_source(ZEMath.h					Sources Headers)
 ze_add_Source(ZEMath.cpp				Sources)
 ze_add_source(ZEMatrix.cpp				Sources)
-ze_add_source(ZEMatrixTests.cpp			Tests)
+ze_add_source(ZEMatrix3x3Tests.cpp		  Tests)
+ze_add_source(ZEMatrix4x4Tests.cpp			Tests)
 ze_add_source(ZEMatrix.h				Sources Headers)
 ze_add_source(ZEOBBox.cpp				Sources)
 ze_add_source(ZEOBBox.h					Sources Headers)
@@ -64,7 +66,7 @@ ze_add_source(ZEPlane.h					Sources Headers)
 ze_add_source(ZEPlaneTests.cpp			Tests)
 ze_add_source(ZEQuaternion.cpp			Sources)
 ze_add_source(ZEQuaternion.h			Sources Headers)
-#ze_add_source(ZEQuaternionTests.cpp	Tests)
+ze_add_source(ZEQuaternionTests.cpp	Tests)
 ze_add_source(ZERay.cpp					Sources)
 ze_add_source(ZERay.h					Sources Headers)
 ze_add_source(ZERayTests.cpp			Tests)
@@ -82,7 +84,9 @@ ze_add_source(ZETrigonometry.h			Sources Headers)
 ze_add_source(ZETrigonometryTests.cpp	Tests)
 ze_add_source(ZEVector.cpp				Sources)
 ze_add_source(ZEVector.h				Sources Headers)
-ze_add_source(ZEVectorTests.cpp			Tests)
+ze_add_source(ZEVector2Tests.cpp		Tests)
+ze_add_source(ZEVector3Tests.cpp		Tests)
+ze_add_source(ZEVector4Tests.cpp		Tests)
 ze_add_source(ZEPolygon.h				Sources Headers)
 ze_add_source(ZEPolygon.cpp				Sources)
 	
