FIX: ZEFoundation, ZEAI and ZECore bugs that had been found by 64bit static code analyzer has been fixed. FIX: Many size_t and ptrdiff_t problems found and fixed. FIX: Many formatted output (printf, zeError and etc) ZEString::ToCString problem fixed. ADD: ZERandom utility class added to ZEFoundation.
svn path=/trunk/; revision=760

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -58,6 +58,8 @@ ze_add_source(ZEError.h 			Sources Headers)
 ze_add_source(ZEError.cpp 			Sources)
 ze_add_source(ZESerialPort.h 		Sources Headers)
 ze_add_source(ZESerialPort.cpp 		Sources)
+ze_add_source(ZERandom.h 			Sources Headers)
+ze_add_source(ZERandom.cpp 			Sources)
 
 ze_add_library(ZEFoundation 
 	SOURCES ${Sources} 
