FIX: Zinek application resources file is added to Cmake. FIX: Fixed blank screen bug by changing D3D9 Render target format to ZE_TPF_F16_4 from ZE_TPF_F32_4 in ZED3D9FrameRenderer.cpp CHG: An old and unused condition (if) for creating depth render targets is removed from ZED3D9Texture2D. ADD: ZED3D9DOFProcessor added
svn path=/trunk/; revision=761

--- a/Source/ZEEngine/CMakeLists.txt
+++ b/Source/ZEEngine/CMakeLists.txt
@@ -67,6 +67,7 @@ ze_add_source(ZEDefinitions.h 				Sources Headers)
 ze_add_source(ZESDK.h 						Sources Headers)
 ze_add_source(ZESDK.cpp 					Sources)
 
+
 ze_add_library(ZEEngineAPI 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
@@ -78,7 +79,7 @@ ze_add_library(ZEEngineAPI
 	INSTALL_COMPONENT ZESDK)
 	
 ze_add_executable(ZE 
-	SOURCES ${Sources} ZEMain.cpp 
+	SOURCES ${Sources} ZEMain.cpp ZECore/ZEWindowResources.rc
 	LIBS ZEEngineAPI
 	WIN32
 	INSTALL
