--- a/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -49,6 +49,8 @@ ze_add_source(ZED3D9CommonTools.cpp				Sources)
 ze_add_source(ZED3D9CommonTools.h				Sources)
 ze_add_source(ZED3D9ComponentBase.cpp			Sources)
 ze_add_source(ZED3D9ComponentBase.h				Sources)
+ze_add_source(ZED3D9DOFProcessor.cpp			Sources)
+ze_add_source(ZED3D9DOFProcessor.h				Sources)
 ze_add_source(ZED3D9EDProcessor.cpp				Sources)
 ze_add_source(ZED3D9EDProcessor.h				Sources)
 ze_add_source(ZED3D9FixedMaterial.cpp			Sources)
