CHG: Solution now uses ZEMath.h and ZEAngle.h functions instead of math.h functions. ADD: ZESkyDomeMaterial.cpp initial commit.
svn path=/trunk/; revision=773

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -80,6 +80,8 @@ ze_add_source(ZESimpleMaterial.cpp 					Sources)
 ze_add_source(ZESimpleMaterial.h 					Sources Header)
 ze_add_source(ZESkyBoxMaterial.cpp 					Sources)
 ze_add_source(ZESkyBoxMaterial.h 					Sources Header)
+ze_add_source(ZESkyDomeMaterial.cpp 				Sources)
+ze_add_source(ZESkyDomeMaterial.h 					Sources Header)
 ze_add_source(ZETerrainMaterial.cpp					Sources)
 ze_add_source(ZETerrainMaterial.h 					Sources Headers ZEPP)
 ze_add_source(ZETexture.cpp 						Sources)
