REM: FindQT.cmake functionality removed from CMake. Now it directly uses qtmacros.cmake. ADD: Tool folder added for build tools and utilities. CHG: Qt libraries, tools and include files has been integrated to ZEExternals. FIX: Deprecated Qt include names has been fixed.
svn path=/trunk/; revision=774

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -43,4 +43,5 @@ add_custom_target(CMakeScripts
 		parse_arguments.cmake
 		pclint.cmake
 		test_cocoon.cmake
-		ze_functions.cmake)
+		ze_functions.cmake
+		ze_qt.cmake)
