--- a/Source/ZEEngine/ZEInput/CMakeLists.txt
+++ b/Source/ZEEngine/ZEInput/CMakeLists.txt
@@ -39,8 +39,8 @@ ze_add_conditional_build(ZEInput ZEDirectInput		FALSE TITLE "Build ZEDirectInput
 ze_add_conditional_build(ZEInput ZEDummyInput		FALSE TITLE "Build ZEDummyInput Input Module.")
 ze_add_conditional_build(ZEInput ZEVirtualInput		FALSE TITLE "Build ZEVirtualInput Input Module.")
 ze_add_conditional_build(ZEInput ZEWindowsInput		TRUE TITLE "Build ZEWindowsInput Input Module.")
-ze_add_conditional_build(ZEInput ZEFreespaceInput	TRUE TITLE "Build ZEFreespaceInput Input Module.")
-ze_add_conditional_build(ZEInput ZEVRPNInput		TRUE TITLE "Build ZEVRPNInput Input Module.")
+ze_add_conditional_build(ZEInput ZEFreespaceInput	FALSE TITLE "Build ZEFreespaceInput Input Module.")
+ze_add_conditional_build(ZEInput ZEVRPNInput		FALSE TITLE "Build ZEVRPNInput Input Module.")
 
 ze_add_source(ZEInputAction.cpp							Sources)
 ze_add_source(ZEInputAction.h							Sources Headers)
