FIX: ZEParticleEffect draw bug fixed. IMP: Screen align and none modes added to particle billboarding type. CHG: ZEParticleSystem integrated into ZEParticleEffect and removed. ADD: ZEVector?::MinValue and ZEVector?::MaxValue constants, which are the maximum and minimum values that can a vector hold, has been added. ADD: ZE_ROF_IMPOSTER and ZE_ROF_TRANSPARENT render flags removed. FIX: ZE_ROF_ENABLE_NO_Z_WRITE flag render problems fixed. CHG: ZEParticleController and its mechanism removed. Instead ZEParticleController ZEObject animation system will be used. ADD: ZEParticleModifier, which is a base class for modifiers that modifies particle attributes, has been added. It will be used for creating modifiers such as wind, blocker, turbulence, gravity, physics integration and etc. IMP: Bounding box calculation code added to ZEParticleEffect and ZEParticleEmitter. CHG: Culling enabled on ZEParticleEffect.
svn path=/trunk/; revision=777

--- a/Source/ZEEngine/ZEParticle/CMakeLists.txt
+++ b/Source/ZEEngine/ZEParticle/CMakeLists.txt
@@ -37,14 +37,12 @@ cmake_minimum_required(VERSION 2.8)
 
 ze_add_source(ZEParticle.cpp				Sources)
 ze_add_source(ZEParticle.h					Sources Headers)
-ze_add_source(ZEParticleController.cpp		Sources)
-ze_add_source(ZEParticleController.h		Sources Headers)
+ze_add_source(ZEParticleModifier.cpp		Sources)
+ze_add_source(ZEParticleModifier.h			Sources Headers)
 ze_add_source(ZEParticleEffect.cpp			Sources)
 ze_add_source(ZEParticleEffect.h			Sources Headers ZEPP)
 ze_add_source(ZEParticleEmitter.cpp			Sources)
 ze_add_source(ZEParticleEmitter.h			Sources Headers ZEPP)
-ze_add_source(ZEParticleSystem.cpp			Sources)
-ze_add_source(ZEParticleSystem.h			Sources Headers ZEPP)
 
 ze_add_library(ZEParticle 
 	SOURCES ${Sources}
