ADD: ZESkyDome, ZESkyDomeMaterial and ZED3D9SkyDomeMaterial added CHG: Unused member variables removed from ZESkyBoxMaterial. IMP: Movement speed is defined as member variable in ZEPlayer and accessor/mutator functions defined. IMP: ZEFile uses a boolean parameter for closing the file automatically after its reference count reaches zero. FIX: ZECanvas now closes the file after loading data from disk. FIX: ZEFontResource now sets the resource file name to avoid runtime crash when searching among the resources. CHG: Outline deficiencies in the rest of the files listed in this commit, due to replace all command, are corrected.
svn path=/trunk/; revision=778

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -73,6 +73,8 @@ ze_add_source(ZESceneCuller.cpp			Sources)
 ze_add_source(ZESceneCuller.h			Sources Headers)
 ze_add_source(ZESkyBrush.cpp			Sources)
 ze_add_source(ZESkyBrush.h				Sources Header ZEPP)
+ze_add_source(ZESkyDome.cpp				Sources)
+ze_add_source(ZESkyDome.h				Sources Header)
 ze_add_source(ZETrigger.cpp				Sources)
 ze_add_source(ZETrigger.h				Sources Header ZEPP)
 
