--- a/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -73,6 +73,8 @@ ze_add_source(ZED3D9SimpleMaterial.cpp			Sources)
 ze_add_source(ZED3D9SimpleMaterial.h			Sources)
 ze_add_source(ZED3D9SkyBoxMaterial.cpp			Sources)
 ze_add_source(ZED3D9SkyBoxMaterial.h			Sources)
+ze_add_source(ZED3D9SkyDomeMaterial.cpp			Sources)
+ze_add_source(ZED3D9SkyDomeMaterial.h			Sources)
 ze_add_source(ZED3D9SSAOProcessor.cpp			Sources)
 ze_add_source(ZED3D9SSAOProcessor.h				Sources)
 ze_add_source(ZED3D9SSAAProcessor.cpp			Sources)
