IMP: Notation improvements on CMake files. FIX: Fixes on formatted strings receiving ZEString instead of ZEString.ToCString(). FIX: Some static code analyzer fixes.
svn path=/trunk/; revision=781

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,10 @@ project(Zinek)
 
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set(ZE_ZINEK_VERSION_MAJOR 0)
-set(ZE_ZINEK_VERSION_MINOR 5)
-set(ZE_ZINEK_VERSION_INTERNAL 0)
-set(ZE_ZINEK_VERSION_BUILD 5)
+set(ZEBUILD_VERSION_MAJOR 0)
+set(ZEBUILD_VERSION_MINOR 5)
+set(ZEBUILD_VERSION_INTERNAL 0)
+set(ZEBUILD_VERSION_BUILD 5)
 
 ## Configuration
 #########################################################################################
@@ -67,71 +67,81 @@ set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG /DEB
 message(STATUS "[ZEBuild] Detecting Platform.")
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-	set(ZE_BUILD_PLATFORM_CLASS "Windows")
+	set(ZEBUILD_PLATFORM_CLASS "Windows")
 	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
-		set(ZE_BUILD_PLATFORM "Win32")
+		set(ZEBUILD_PLATFORM "Win32")
 	else()
-		set(ZE_BUILD_PLATFORM "Win64")
+		set(ZEBUILD_PLATFORM "Win64")
 	endif()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	set(ZE_BUILD_PLATFORM_CLASS "MacOSX")
+	set(ZEBUILD_PLATFORM_CLASS "MacOSX")
 	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
-		set(ZE_BUILD_PLATFORM "MacOSX32")
+		set(ZEBUILD_PLATFORM "MacOSX32")
 	else()
-		set(ZE_BUILD_PLATFORM "MacOSX64")
+		set(ZEBUILD_PLATFORM "MacOSX64")
 	endif()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	set(ZE_BUILD_PLATFORM_CLASS "Linux")
+	set(ZEBUILD_PLATFORM_CLASS "Linux")
 	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
-		set(ZE_BUILD_PLATFORM "Linux32")
+		set(ZEBUILD_PLATFORM "Linux32")
 	else()
-		set(ZE_BUILD_PLATFORM "Linux64")
+		set(ZEBUILD_PLATFORM "Linux64")
 	endif()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Unix")
-	set(ZE_BUILD_PLATFORM_CLASS "Unix")
+	set(ZEBUILD_PLATFORM_CLASS "Unix")
 	if (${CMAKE_SIZEOF_VOID_P} EQUAL 4)
-		set(ZE_BUILD_PLATFORM "Unix32")
+		set(ZEBUILD_PLATFORM "Unix32")
 	else()
-		set(ZE_BUILD_PLATFORM "Unix64")
+		set(ZEBUILD_PLATFORM "Unix64")
 	endif()
 else()
 	message(SEND_ERROR "[ZEBuild] Platform is not supported. Operating System : ${CMAKE_SYSTEM_NAME}, Achitecture : ${CMAKE_SYSTEM_PROCESSOR}, Compiler : ${CMAKE_CXX_COMPILER}")
 endif()
 
-set(ZE_BUILD_COMPILER ${CMAKE_CXX_COMPILER})
-set(ZE_BUILD_LINKER ${CMAKE_LINKER})
-set(ZE_BUILD_LIBRARIAN ${CMAKE_LINKER})
-set(ZE_BUILD_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+if (CMAKE_CXX_COMPILER MATCHES "cl")
+	set(ZEBUILD_PLATFORM_COMPILER "MSVC")
+elseif (CMAKE_CXX_COMPILER MATCHES "gcc")
+	set(ZEBUILD_PLATFORM_COMPILER "GCC")
+else()
+	set(ZEBUILD_PLATFORM_COMPILER "UNKNOWN")
+endif()
 
-message(STATUS "[ZEBuild] Major Version    : " ${ZE_ZINEK_VERSION_MAJOR})
-message(STATUS "[ZEBuild] Minor Version    : " ${ZE_ZINEK_VERSION_MINOR})
-message(STATUS "[ZEBuild] Internal Version : " ${ZE_ZINEK_VERSION_INTERNAL})
-message(STATUS "[ZEBuild] Build            : " ${ZE_ZINEK_VERSION_BUILD})
-message(STATUS "[ZEBuild] Platform Class   : " ${ZE_BUILD_PLATFORM_CLASS})
-message(STATUS "[ZEBuild] Platform         : " ${ZE_BUILD_PLATFORM})
-message(STATUS "[ZEBuild] Architecture     : " ${ZE_BUILD_ARCHITECTURE})
-message(STATUS "[ZEBuild] Compiler         : " ${ZE_BUILD_COMPILER})
-message(STATUS "[ZEBuild] Linker           : " ${ZE_BUILD_LINKER})
-message(STATUS "[ZEBuild] Librarian        : " ${ZE_BUILD_LIBRARIAN})
+set(ZEBUILD_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
+message(STATUS "[ZEBuild] Major Version    : " ${ZEBUILD_VERSION_MAJOR})
+message(STATUS "[ZEBuild] Minor Version    : " ${ZEBUILD_VERSION_MINOR})
+message(STATUS "[ZEBuild] Internal Version : " ${ZEBUILD_VERSION_INTERNAL})
+message(STATUS "[ZEBuild] Build            : " ${ZEBUILD_VERSION_BUILD})
+message(STATUS "[ZEBuild] Platform Class   : " ${ZEBUILD_PLATFORM_CLASS})
+message(STATUS "[ZEBuild] Platform         : " ${ZEBUILD_PLATFORM})
+message(STATUS "[ZEBuild] Architecture     : " ${ZEBUILD_ARCHITECTURE})
+message(STATUS "[ZEBuild] C++ Compiler     : " ${ZEBUILD_COMPILER})
 message(STATUS "[ZEBuild] Platform detected.")
 
+if (ZEBUILD_PLATFORM_COMPILER MATCHES "UNKNOWN")
+message(ERROR "Unknown compiler detected. You can only compile Zinek Engine with Microsoft Visual C++ Compiler, Intel C++ Compiler, GCC and CLANG. Other compiler are not supported.")
+endif()
 
 ## Definitions
 #########################################################################################
-string(TOUPPER ${ZE_BUILD_PLATFORM_CLASS} ZE_BUILD_PLATFORM_CLASS_UPPER_CASE)
-string(TOUPPER ${ZE_BUILD_PLATFORM} ZE_BUILD_PLATFORM_UPPER_CASE)
+string(TOUPPER ${ZEBUILD_PLATFORM} ZEBUILD_PLATFORM_UPPER_CASE)
+string(TOUPPER ${ZEBUILD_PLATFORM_CLASS} ZEBUILD_PLATFORM_CLASS_UPPER_CASE)
+string(TOUPPER ${ZEBUILD_PLATFORM_COMPILER} ZEBUILD_PLATFORM_COMPILER_UPPER_CASE)
 
 append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
 	ZE_ZINEK
-	ZE_ZINEK_VERSION_PLATFORM=${ZE_BUILD_PLATFORM}
-	"ZE_ZINEK_VERSION_PLATFORM_${ZE_BUILD_PLATFORM_CLASS_UPPER_CASE}"
-	ZE_ZINEK_VERSION_PLATFORM_CLASS=${ZE_BUILD_PLATFORM_CLASS}
-	"ZE_ZINEK_VERSION_PLATFORM_${ZE_BUILD_PLATFORM_UPPER_CASE}"
-	ZE_ZINEK_VERSION_MAJOR=${ZE_ZINEK_VERSION_MAJOR}
-	ZE_ZINEK_VERSION_MINOR=${ZE_ZINEK_VERSION_MINOR}
-	ZE_ZINEK_VERSION_INTERNAL=${ZE_ZINEK_VERSION_INTERNAL}
-	ZE_ZINEK_VERSION_BUILD=${ZE_ZINEK_VERSION_BUILD}
-	ZE_ZINEK_VERSION_PLATFORM)
+	"ZE_PLATFORM_${ZEBUILD_PLATFORM_UPPER_CASE}"
+	"ZE_PLATFORM_CLASS_${ZEBUILD_PLATFORM_CLASS_UPPER_CASE}"
+	"ZE_PLATFORM_COMPILER_${ZEBUILD_PLATFORM_COMPILER_UPPER_CASE}"
+
+	ZE_PLATFORM="${ZEBUILD_PLATFORM}"
+	ZE_PLATFORM_CLASS="${ZEBUILD_PLATFORM_CLASS}"
+	ZE_PLATFORM_COMPILER="${ZEBUILD_PLATFORM_COMPILER}"
+
+	ZE_VERSION_MAJOR=${ZEBUILD_VERSION_MAJOR}
+	ZE_VERSION_MINOR=${ZEBUILD_VERSION_MINOR}
+	ZE_VERSION_INTERNAL=${ZEBUILD_VERSION_INTERNAL}
+	ZE_VERSION_BUILD=${ZEBUILD_VERSION_BUILD})
 
 	
 
@@ -199,30 +209,30 @@ include_directories(
 	${CMAKE_SOURCE_DIR}/Source/ZEFoundation
 	${CMAKE_SOURCE_DIR}/Source/ZEToolSDK
 	${CMAKE_SOURCE_DIR}/Source/ZETest
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}/DirectX
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}/PhysX2/Cooking 
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}/PhysX2/Foundation 
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}/PhysX2/PhysXLoader
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}/PhysX2/Physics
-	${CMAKE_SOURCE_DIR}/Include/${ZE_BUILD_PLATFORM}/3dsMax/2010)
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/DirectX
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/PhysX2/Cooking 
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/PhysX2/Foundation 
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/PhysX2/PhysXLoader
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/PhysX2/Physics
+	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/3dsMax/2010)
 	
 link_directories(
-	#${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}
-	#${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/Release
-	#${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/Release/vrpn
+	#${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}
+	#${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/Release
+	#${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/Release/vrpn
 
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/$(ConfigurationName)
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/$(ConfigurationName)/vrpn
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/$(ConfigurationName)/Bullet
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/DirectX
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/PhysX2
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/PhysX3
-	${CMAKE_SOURCE_DIR}/Lib/${ZE_BUILD_PLATFORM}/3dsMax/2010)
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/$(ConfigurationName)
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/$(ConfigurationName)/vrpn
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/$(ConfigurationName)/Bullet
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/DirectX
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/PhysX2
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/PhysX3
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/3dsMax/2010)
 
 include(ze_qt)
 
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Rundir)
+##set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Rundir)
 
 ## Projects
 #########################################################################################
@@ -234,7 +244,7 @@ add_subdirectory(Source)
 set(ZEBUILD_BUILD_INSTALLER		TRUE CACHE BOOL "Build Installer.")
 
 if (ZEBUILD_BUILD_INSTALLER)
-	install(DIRECTORY Dll/${ZE_BUILD_PLATFORM}/ 
+	install(DIRECTORY Dll/${ZEBUILD_PLATFORM}/ 
 		DESTINATION Bin 
 		CONFIGURATIONS Release
 		FILES_MATCHING 
@@ -242,7 +252,7 @@ if (ZEBUILD_BUILD_INSTALLER)
 			PATTERN "Debug" EXCLUDE
 			PATTERN "Release" EXCLUDE)
 
-	install(DIRECTORY Dll/${ZE_BUILD_PLATFORM}/Release/
+	install(DIRECTORY Dll/${ZEBUILD_PLATFORM}/Release/
 		DESTINATION Bin
 		CONFIGURATIONS Release)
 			
