ADD: ZED3D9FogProcessor added. CHG: ZED3D9DOFProcessor.h header code layout corrected.
svn path=/trunk/; revision=782

--- a/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -55,6 +55,8 @@ ze_add_source(ZED3D9EDProcessor.cpp				Sources)
 ze_add_source(ZED3D9EDProcessor.h				Sources)
 ze_add_source(ZED3D9FixedMaterial.cpp			Sources)
 ze_add_source(ZED3D9FixedMaterial.h				Sources)
+ze_add_source(ZED3D9FogProcessor.cpp			Sources)
+ze_add_source(ZED3D9FogProcessor.h				Sources)
 ze_add_source(ZED3D9FrameRenderer.cpp			Sources)
 ze_add_source(ZED3D9FrameRenderer.h				Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp			Sources)
