ADD: ZED3D9MLAAProcessor implemented. CHG: FarZ changed to 1000.
svn path=/trunk/; revision=784

--- a/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -61,6 +61,9 @@ ze_add_source(ZED3D9FrameRenderer.cpp			Sources)
 ze_add_source(ZED3D9FrameRenderer.h				Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp			Sources)
 ze_add_source(ZED3D9HDRProcessor.h				Sources ZEPP)
+ze_add_source(ZED3D9MLAAProcessorAreaImage.cpp	Sources)
+ze_add_source(ZED3D9MLAAProcessor.cpp			Sources)
+ze_add_source(ZED3D9MLAAProcessor.h				Sources)
 ze_add_source(ZED3D9Module.cpp					Sources)
 ze_add_source(ZED3D9Module.h					Sources)
 ze_add_source(ZED3D9Profiler.cpp				Sources)
