CHG: ZEModel::GetBoneByName renamed to ZEModel::GetBone. CHG: ZEModel::GetMeshByName renamed to ZEModel::GetMesh. REM: ShowCursor function call removed from Application Modules. CHG: ZE_IMA_SCROLL_AXIS renamed to more generic ZE_IMA_WHEEL_AXIS. IMP: ZEModelAnimationTrack's frame variable's types (CurrentFrame, StartFrame and EndFrame) has been changed to float from ZEInt. FIX: ZEModelAnimationTrack static pose bug fixed. IMP: ZEModelAnimationTrack ZEModelAnimationTrack::AdvanceAnimation function renamed and divided into Tick and UpdateMeshesAndBones functions. Tick calculates animation frame and UpdateMeshesAndBones updates mesh and bone orientations. FIX: Visual Studio debug output redirection fixed. FIX: zeBreak macro has been fixed. FIX: Programmatic break points of zeCriticalError, zeError and zeAssert has been restored. FIX: ZETerrain streaming has been improved. FIX: Terrain blending has been implemented and improved. FIX: Terrain pop up artifacts has been improved. CHG: Terrain's mesh topology has been changed and ZETerrainVertexBuffer has been updated.
svn path=/trunk/; revision=791

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,7 +152,7 @@ set(ZEBUILD_STATIC_CHECKS_ENABLE_CPPCHECK	FALSE	CACHE BOOL "Enable cppcheck stat
 set(ZEBUILD_STATIC_CHECKS_ENABLE_PCLINT		FALSE	CACHE BOOL "Enable pc-lint static checker.")
 set(ZEBUILD_UNIT_TESTS_ENABLE				TRUE	CACHE BOOL "Enable unit tests.")
 set(ZEBUILD_UNIT_TESTS_COVERAGE_ENABLE		TRUE	CACHE BOOL "Enables code coverage instrumentation.")
-set(ZEBUILD_DEBUG_ENABLE					FALSE	CACHE BOOL "Enable ZEBuild debug mode.")
+set(ZEBUILD_DEBUG_ENABLE					TRUE	CACHE BOOL "Enable debug extensions.")
 set(ZEBUILD_DEBUG_HEAP_CHECK_ENABLE			FALSE	CACHE BOOL "Enable heap checking.")
 set(ZEBUILD_DEBUG_BREAK_ON_ERROR			TRUE	CACHE BOOL "Break if an error occures.")
 set(ZEBUILD_DEBUG_BREAK_ON_WARNING			FALSE	CACHE BOOL "Break if an warning occures.")
@@ -170,7 +170,7 @@ if (ZEBUILD_DEBUG_ENABLE)
 	endif()
 
 	if (ZEBUILD_DEBUG_HEAP_CHECK_ENABLE)
-		append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG ZE_DEBUG_MEMORY_CHECKS_ENABLE)
+		append_property(GLOBAL PROPERTY COMPILE_DEFINITIONS_DEBUG ZE_DEBUG_MEMORY_CHECKS_ENABLE)
 	endif()
 endif()
 
@@ -218,7 +218,7 @@ include_directories(
 	${CMAKE_SOURCE_DIR}/Include/${ZEBUILD_PLATFORM}/3dsMax/2010)
 	
 link_directories(
-	#${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}
+	${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}
 	#${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/Release
 	#${CMAKE_SOURCE_DIR}/Lib/${ZEBUILD_PLATFORM}/Release/vrpn
 
